--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+wike (1.5.2) focal; urgency=medium
+
+  * Translations
+
 wike (1.5.1) focal; urgency=medium
 
   * Privacy improvements & translations
