--- a/po/nl.po
+++ b/po/nl.po
@@ -23,10 +23,6 @@ msgstr "Geen Wikipedia-toegang"
 msgid "Check your Internet connection and try again"
 msgstr "Controleer uw internetverbinding en probeer het opnieuw"
 
-#: ../src/view.py:233
-msgid "Recent articles"
-msgstr "Recente artikelen"
-
 #: ../src/window.py:150 ../src/window.py:255
 msgid "New bookmark: "
 msgstr "Nieuwe bladwijzer: "
@@ -38,19 +34,6 @@ msgstr "De Wikipedia-url is gekopieerd naar het klembord"
 #: ../src/search.py:249
 msgid "Default search language: "
 msgstr "Standaard zoektaal: "
-
-#. Don't remove format tags!
-#: ../src/bookmarks.py:46
-msgid "<b>No bookmarks</b>\n"
-"\n"
-"<small>Use the <i>Add Bookmark</i> button\n"
-"or click a link with the middle mouse button\n"
-"to add bookmarks to the list</small>"
-msgstr "<b>Geen bladwijzers</b>\n"
-"\n"
-"<small>Klik op de knop <i>Bladwijzer toevoegen</i>\n"
-"of klik met de middelste muisknop op een link om een\n"
-"bladwijzer toe te voegen</small>"
 
 #: ../src/bookmarks.py:137
 msgid "Clear Bookmarks List?"
@@ -189,15 +172,11 @@ msgctxt "shortcut window"
 msgid "Add bookmark"
 msgstr "Voeg bladwijzer toe"
 
-#: ../data/ui/menu.ui:8
+#: ../src/prefs.py:81 ../data/ui/menu.ui:8
 msgid "Wikipedia Main Page"
 msgstr "Wikipedia-startpagina"
 
-#: ../src/prefs.py:81 ../data/ui/menu.ui:13
-msgid "Random article"
-msgstr "Willekeurig artikel"
-
-#: ../data/ui/menu.ui:18
+#: ../src/view.py:234 ../data/ui/menu.ui:18
 msgid "Recent Articles"
 msgstr "Recente artikelen"
 
@@ -237,25 +216,9 @@ msgstr "Gedrag"
 msgid "Keep a list of recent articles"
 msgstr "Lijst met recente artikelen bijhouden"
 
-#: ../src/prefs.py:81
-msgid "Last article"
-msgstr "Recentst gelezen artikel"
-
 #: ../data/ui/prefs.ui:14
 msgid "General"
 msgstr "Algemeen"
-
-#: ../data/ui/prefs.ui:184
-msgid "Filter available languages"
-msgstr "Beschikbare talen filteren"
-
-#: ../data/ui/prefs.ui:218
-msgid "Select all"
-msgstr "Alles selecteren"
-
-#: ../data/ui/prefs.ui:230
-msgid "Select none"
-msgstr "Niets selecteren"
 
 #: ../data/ui/prefs.ui:178
 msgid "Languages"
@@ -305,17 +268,13 @@ msgstr "Zoek binnen artikelen"
 msgid "Article table of contents"
 msgstr "Inhoudsopgaven"
 
-#: ../data/com.github.hugolabe.Wike.metainfo.xml.in:26
+#: ../data/ui/header.ui:136 ../data/com.github.hugolabe.Wike.metainfo.xml.in:26
 msgid "View article in other languages"
 msgstr "Lees artikelen in andere talen"
 
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:16
 msgid "Features:"
 msgstr "Kenmerken:"
-
-#: ../src/prefs.py:81
-msgid "Wikipedia main page"
-msgstr "Wikipedia-startpagina"
 
 #: ../data/ui/menu.ui:50
 msgid "Dark Mode"
@@ -324,10 +283,6 @@ msgstr "Donker thema"
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:28
 msgid "Dark mode"
 msgstr "Donker thema"
-
-#: ../src/view.py:161
-msgid "Try again"
-msgstr "Opnieuw proberen"
 
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:27
 msgid "GNOME Shell search integration"
@@ -441,4 +396,52 @@ msgstr "Persoonlijke gegevens wissen"
 #: ../data/ui/prefs.ui:159
 msgid "Cookies and cache data will be deleted"
 msgstr "De cookies en cache worden gewist"
+
+#: ../src/view.py:161
+msgid "Try Again"
+msgstr "Opnieuw proberen"
+
+#: ../src/prefs.py:81 ../data/ui/menu.ui:13
+msgid "Random Article"
+msgstr "Willekeurig artikel"
+
+#: ../src/prefs.py:81
+msgid "Last Article"
+msgstr "Recentst gelezen artikel"
+
+#: ../src/bookmarks.py:46
+msgid "<b>No Bookmarks</b>\n"
+"\n"
+"<small>Use the <i>Add Bookmark</i> button\n"
+"or click a link with the middle mouse button\n"
+"to add bookmarks to the list</small>"
+msgstr "<b>Geen bladwijzers</b>\n"
+"\n"
+"<small>Klik op de knop <i>Bladwijzer toevoegen</i>\n"
+"of klik met de middelste muisknop op een link om een\n"
+"bladwijzer toe te voegen</small>"
+
+#: ../data/ui/header.ui:61
+msgid "Search articles"
+msgstr "Zoek naar artikelen"
+
+#: ../data/ui/header.ui:95
+msgid "Bookmarks"
+msgstr "Bladwijzers"
+
+#: ../data/ui/header.ui:117
+msgid "Table of contents"
+msgstr "Inhoudsopgave"
+
+#: ../data/ui/prefs.ui:184
+msgid "Filter Available Languages"
+msgstr "Beschikbare talen filteren"
+
+#: ../data/ui/prefs.ui:218
+msgid "Select All"
+msgstr "Alles selecteren"
+
+#: ../data/ui/prefs.ui:230
+msgid "Select None"
+msgstr "Niets selecteren"
 
