--- a/po/fr.po
+++ b/po/fr.po
@@ -23,10 +23,6 @@ msgstr "Impossible d'accéder à Wikipédia"
 msgid "Check your Internet connection and try again"
 msgstr "Vérifier votre connection Internet et réessayer"
 
-#: ../src/view.py:233
-msgid "Recent articles"
-msgstr "Articles récents"
-
 #: ../src/window.py:150 ../src/window.py:255
 msgid "New bookmark: "
 msgstr "Nouveau signet : "
@@ -38,19 +34,6 @@ msgstr "URL de Wikipédia copiée dans le presse-papiers"
 #: ../src/search.py:249
 msgid "Default search language: "
 msgstr "Langue de recherche par défault : "
-
-#. Don't remove format tags!
-#: ../src/bookmarks.py:46
-msgid "<b>No bookmarks</b>\n"
-"\n"
-"<small>Use the <i>Add Bookmark</i> button\n"
-"or click a link with the middle mouse button\n"
-"to add bookmarks to the list</small>"
-msgstr "<b>Aucun signet</b>\n"
-"\n"
-"<small>Utilisez le bouton <i>Ajouter un signet</i>\n"
-"ou cliquez sur un lien avec le bouton central de la souris\n"
-"pour ajouter des signets à la liste</small>"
 
 #: ../src/bookmarks.py:137
 msgid "Clear Bookmarks List?"
@@ -188,15 +171,11 @@ msgctxt "shortcut window"
 msgid "Add bookmark"
 msgstr "Ajouter aux signets"
 
-#: ../data/ui/menu.ui:8
+#: ../src/prefs.py:81 ../data/ui/menu.ui:8
 msgid "Wikipedia Main Page"
 msgstr "Page principale de Wikipédia"
 
-#: ../src/prefs.py:81 ../data/ui/menu.ui:13
-msgid "Random article"
-msgstr "Article aléatoire"
-
-#: ../data/ui/menu.ui:18
+#: ../src/view.py:234 ../data/ui/menu.ui:18
 msgid "Recent Articles"
 msgstr "Articles récents"
 
@@ -236,25 +215,9 @@ msgstr "Comportement"
 msgid "Keep a list of recent articles"
 msgstr "Conserver une liste des articles récents"
 
-#: ../src/prefs.py:81
-msgid "Last article"
-msgstr "Dernier article"
-
 #: ../data/ui/prefs.ui:14
 msgid "General"
 msgstr "Général"
-
-#: ../data/ui/prefs.ui:184
-msgid "Filter available languages"
-msgstr "Filtrer les langues disponibles"
-
-#: ../data/ui/prefs.ui:218
-msgid "Select all"
-msgstr "Tout sélectionner"
-
-#: ../data/ui/prefs.ui:230
-msgid "Select none"
-msgstr "Ne rien sélectionner"
 
 #: ../data/ui/prefs.ui:178
 msgid "Languages"
@@ -304,17 +267,13 @@ msgstr "Recherche de texte dans les articles"
 msgid "Article table of contents"
 msgstr "Sommaire de l'article"
 
-#: ../data/com.github.hugolabe.Wike.metainfo.xml.in:26
+#: ../data/ui/header.ui:136 ../data/com.github.hugolabe.Wike.metainfo.xml.in:26
 msgid "View article in other languages"
 msgstr "Voir l'article dans d'autres langues"
 
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:16
 msgid "Features:"
 msgstr "Fonctionnalités : "
-
-#: ../src/prefs.py:81
-msgid "Wikipedia main page"
-msgstr "Page principale de Wikipédia"
 
 #: ../data/ui/menu.ui:50
 msgid "Dark Mode"
@@ -323,10 +282,6 @@ msgstr "Mode Sombre"
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:28
 msgid "Dark mode"
 msgstr "Mode sombre"
-
-#: ../src/view.py:161
-msgid "Try again"
-msgstr "Réessayer"
 
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:27
 msgid "GNOME Shell search integration"
@@ -440,4 +395,52 @@ msgstr "Supprimer les données personnelles"
 #: ../data/ui/prefs.ui:159
 msgid "Cookies and cache data will be deleted"
 msgstr "Les cookies et les données en cache seront supprimés"
+
+#: ../src/view.py:161
+msgid "Try Again"
+msgstr "Réessayer"
+
+#: ../src/prefs.py:81 ../data/ui/menu.ui:13
+msgid "Random Article"
+msgstr "Article aléatoire"
+
+#: ../src/prefs.py:81
+msgid "Last Article"
+msgstr "Dernier article"
+
+#: ../src/bookmarks.py:46
+msgid "<b>No Bookmarks</b>\n"
+"\n"
+"<small>Use the <i>Add Bookmark</i> button\n"
+"or click a link with the middle mouse button\n"
+"to add bookmarks to the list</small>"
+msgstr "<b>Aucun signet</b>\n"
+"\n"
+"<small>Utilisez le bouton <i>Ajouter un signet</i>\n"
+"ou cliquez sur un lien avec le bouton central de la souris\n"
+"pour ajouter des signets à la liste</small>"
+
+#: ../data/ui/header.ui:61
+msgid "Search articles"
+msgstr "Rechercher articles"
+
+#: ../data/ui/header.ui:95
+msgid "Bookmarks"
+msgstr "Signets"
+
+#: ../data/ui/header.ui:117
+msgid "Table of contents"
+msgstr "Sommaire"
+
+#: ../data/ui/prefs.ui:184
+msgid "Filter Available Languages"
+msgstr "Filtrer les langues disponibles"
+
+#: ../data/ui/prefs.ui:218
+msgid "Select All"
+msgstr "Tout sélectionner"
+
+#: ../data/ui/prefs.ui:230
+msgid "Select None"
+msgstr "Ne rien sélectionner"
 
