--- a/po/de.po
+++ b/po/de.po
@@ -23,10 +23,6 @@ msgstr "Wikipedia nicht erreichbar"
 msgid "Check your Internet connection and try again"
 msgstr "Internetverbindung überprüfen oder noch einmal versuchen"
 
-#: ../src/view.py:233
-msgid "Recent articles"
-msgstr "Letzte Artikel"
-
 #: ../src/window.py:150 ../src/window.py:255
 msgid "New bookmark: "
 msgstr "Neues Lesezeichen:"
@@ -38,19 +34,6 @@ msgstr "Wikipedia URL wurde in die Zwischenablage kopiert"
 #: ../src/search.py:249
 msgid "Default search language: "
 msgstr "Standardsprache für Suche:"
-
-#. Don't remove format tags!
-#: ../src/bookmarks.py:46
-msgid "<b>No bookmarks</b>\n"
-"\n"
-"<small>Use the <i>Add Bookmark</i> button\n"
-"or click a link with the middle mouse button\n"
-"to add bookmarks to the list</small>"
-msgstr "<b>Keine Lesezeichen</b>\n"
-"\n"
-"<small>Verwenden Sie den <i>Lesezeichen hinzufügen</i> Knopf \n"
-"oder klicken Sie mit einem Mittelklick um das Lesezeichen\n"
-"der Liste hinzuzufügen."
 
 #: ../src/bookmarks.py:137
 msgid "Clear Bookmarks List?"
@@ -82,7 +65,8 @@ msgstr "Suche und lese Wikipediaartikel\n"
 #. Hugo Olabera <hugolabe@gmail.com>
 #: ../data/ui/about.ui:13
 msgid "translator-credits"
-msgstr "Jan Krings <liquidksky42@gmail.com>"
+msgstr "Jan Krings <liquidksky42@gmail.com>\n"
+"Markus Göllnitz <camelcasenick@bewares.it>"
 
 #: ../data/ui/bookmarks.ui:58
 msgid "Add Bookmark"
@@ -188,15 +172,11 @@ msgctxt "shortcut window"
 msgid "Add bookmark"
 msgstr "Lesezeichen hinzufügen"
 
-#: ../data/ui/menu.ui:8
+#: ../src/prefs.py:81 ../data/ui/menu.ui:8
 msgid "Wikipedia Main Page"
 msgstr "Wikipedia-Hauptseite"
 
-#: ../src/prefs.py:81 ../data/ui/menu.ui:13
-msgid "Random article"
-msgstr "Zufälliger Artikel"
-
-#: ../data/ui/menu.ui:18
+#: ../src/view.py:234 ../data/ui/menu.ui:18
 msgid "Recent Articles"
 msgstr "Letzte Artikel"
 
@@ -236,25 +216,9 @@ msgstr "Verhalten"
 msgid "Keep a list of recent articles"
 msgstr "Liste zuletzt aufgerufener Artikel anlegen"
 
-#: ../src/prefs.py:81
-msgid "Last article"
-msgstr "Letzter Artikel"
-
 #: ../data/ui/prefs.ui:14
 msgid "General"
 msgstr "Allgemein"
-
-#: ../data/ui/prefs.ui:184
-msgid "Filter available languages"
-msgstr "Filter verfügbarer Sprachen"
-
-#: ../data/ui/prefs.ui:218
-msgid "Select all"
-msgstr "Alles auswählen"
-
-#: ../data/ui/prefs.ui:230
-msgid "Select none"
-msgstr "Nichts auswählen"
 
 #: ../data/ui/prefs.ui:178
 msgid "Languages"
@@ -304,17 +268,13 @@ msgstr "Textsuche in Artikel"
 msgid "Article table of contents"
 msgstr "Inhaltsverzeichnis in Artikeln"
 
-#: ../data/com.github.hugolabe.Wike.metainfo.xml.in:26
+#: ../data/ui/header.ui:136 ../data/com.github.hugolabe.Wike.metainfo.xml.in:26
 msgid "View article in other languages"
 msgstr "Artikel in anderer Sprache ansehen"
 
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:16
 msgid "Features:"
 msgstr "Merkmale:"
-
-#: ../src/prefs.py:81
-msgid "Wikipedia main page"
-msgstr "Wikipedia Hauptseite"
 
 #: ../data/ui/menu.ui:50
 msgid "Dark Mode"
@@ -323,10 +283,6 @@ msgstr "Dunkler Modus"
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:28
 msgid "Dark mode"
 msgstr "Dunkler Modus"
-
-#: ../src/view.py:161
-msgid "Try again"
-msgstr "erneut versuchen"
 
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:27
 msgid "GNOME Shell search integration"
@@ -350,7 +306,7 @@ msgstr "Persönliche Daten tatsächlich löschen?"
 
 #: ../src/prefs.py:166
 msgid "Cookies and cache data will be deleted permanently."
-msgstr "Cookies werden dauerhaft gelöscht werden und der Cache geleert."
+msgstr "Cookies werden dauerhaft gelöscht sein und der Cache geleert."
 
 #: ../src/prefs.py:167
 msgid "Clear Data"
@@ -407,7 +363,7 @@ msgstr "eine Vorschaubox eines Artikels zeigen, wenn die Maus über einem Link s
 
 #: ../data/ui/prefs.ui:104
 msgid "Privacy"
-msgstr "Privatsphäre"
+msgstr "Datenschutz"
 
 #: ../data/ui/prefs.ui:110
 msgid "Search"
@@ -440,4 +396,52 @@ msgstr "Persönliche Daten löschen"
 #: ../data/ui/prefs.ui:159
 msgid "Cookies and cache data will be deleted"
 msgstr "Cookies werden gelöscht und der Cache geleert"
+
+#: ../src/view.py:161
+msgid "Try Again"
+msgstr "erneut versuchen"
+
+#: ../src/prefs.py:81 ../data/ui/menu.ui:13
+msgid "Random Article"
+msgstr "Zufälliger Artikel"
+
+#: ../src/prefs.py:81
+msgid "Last Article"
+msgstr "Letzter Artikel"
+
+#: ../src/bookmarks.py:46
+msgid "<b>No Bookmarks</b>\n"
+"\n"
+"<small>Use the <i>Add Bookmark</i> button\n"
+"or click a link with the middle mouse button\n"
+"to add bookmarks to the list</small>"
+msgstr "<b>Keine Lesezeichen</b>\n"
+"\n"
+"<small>Verwenden Sie den <i>Lesezeichen hinzufügen</i> Knopf \n"
+"oder klicken Sie mit einem Mittelklick um das Lesezeichen\n"
+"der Liste hinzuzufügen."
+
+#: ../data/ui/header.ui:61
+msgid "Search articles"
+msgstr "Suche Artikel"
+
+#: ../data/ui/header.ui:95
+msgid "Bookmarks"
+msgstr "Lesezeichen"
+
+#: ../data/ui/header.ui:117
+msgid "Table of contents"
+msgstr "Inhaltsverzeichnis"
+
+#: ../data/ui/prefs.ui:184
+msgid "Filter Available Languages"
+msgstr "Filter verfügbarer Sprachen"
+
+#: ../data/ui/prefs.ui:218
+msgid "Select All"
+msgstr "Alles auswählen"
+
+#: ../data/ui/prefs.ui:230
+msgid "Select None"
+msgstr "Nichts auswählen"
 
